# Patcher

./: .gitignore  LICENSE  README.md  compile_to_exe.bat  config.yaml  generate_patch_filelist.py  gui.py  index.html  install.py  logger.py  main.py  package-lock.json  package.json  python_backend.py  requirements.txt  settings.py  setup_resources.py  start.bat  tsconfig.json  utils.py
downloader/: file_manager.py  network.py  updater.py
src/: App.vue  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
